# eoos-project-if-win32

./: .gitmodules  CMakeLists.txt  README.md
cmake/: EOOS.cmake  EoosConfig.cmake.in  EoosOption.cmake  _EOOSConfig.cmake.in  eoos.cmake
codebase/: CMakeLists.txt
quality/sca/documentation/: eoos-if-win32-report.xlsx  eoos-report.xlsx
quality/sca/projects/absint/: eoos-if-win32.dax
quality/sca/projects/absint/stubs/include/: Windows.h
quality/sca/reports/: eoos-if-win32-report.xlsx
quality/ut/reports/coverage/: index.html
quality/ut/reports/coverage/Modules/: EoosTests.html
quality/ut/reports/coverage/Modules/EoosTests/: api.Collection.hpp.html  api.Guard.hpp.html  api.Heap.hpp.html  api.IllegalValue.hpp.html  api.Iterable.hpp.html  api.Iterator.hpp.html  api.List.hpp.html  api.ListIterator.hpp.html  api.Mutex.hpp.html  api.MutexManager.hpp.html  api.Object.hpp.html  api.OutStream.hpp.html  api.Queue.hpp.html  api.Runnable.hpp.html  api.Scheduler.hpp.html  api.Semaphore.hpp.html  api.SemaphoreManager.hpp.html  api.SequenceContainer.hpp.html  api.SmartPointer.hpp.html  api.StreamManager.hpp.html  api.String.hpp.html  api.System.hpp.html  api.Task.hpp.html  api.Thread.hpp.html  lib.AbstractBaseString.hpp.html  lib.AbstractBuffer.hpp.html  lib.AbstractList.hpp.html  lib.AbstractTask.hpp.html  lib.AbstractThreadTask.hpp.html  lib.Align.hpp.html  lib.Allocator.hpp.html  lib.ArgumentParser.hpp.html  lib.BaseString.hpp.html  lib.Buffer.hpp.html  lib.CharTrait.hpp.html  lib.CircularList.hpp.html  lib.Fifo.hpp.html  lib.Guard.hpp.html  lib.Heap.hpp.html  lib.LinkedList.hpp.html  (+38 more)
scripts/: build.ps1  functions.psm1
